# PythonPlaywright

./: Makefile  README.md  pyproject.toml
test/: test_example.py
